--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 20vh;
+    border-bottom: dotted black 1px;
 }
 
 .un header h1{
@@ -171,7 +172,7 @@ body{
      flex-direction: column;
      align-items: flex-start;
      justify-content: center;
-     width: 4%;
+     width: 20px;
      height: 100vh;
   }
 
