--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body{
     align-items: center;
     height: 20vh;
     border-bottom: dotted black 1px;
+    flex-direction: column;
 }
 
 .un header h1{
@@ -30,9 +31,14 @@ body{
     height: 80vh;
 }
 
+.title-un{
+  text-align: center;
+  position: relative;
+}
+
   .items {
-    position: absolute;
-    bottom: 0;
+   /* position: absolute;
+    bottom: 0;*/
     user-select: none;
     height: 80vh;
     width: 100%;
@@ -151,9 +157,6 @@ body{
   }
 
 @media screen and (max-height : 563px) {
- .un header{
-    height: 10vh;
- }
 
  .un main{
   height: 90vh;
@@ -169,28 +172,53 @@ body{
 @media screen and (max-height : 500px) {
   .un header{
      display: flex;
-     flex-direction: column;
-     align-items: flex-start;
-     justify-content: center;
-     width: 20px;
+     justify-content: space-between;
+     align-items: center;
+     width:100%;
      height: 100vh;
+     flex-direction: row;
+
   }
 
-  .un header h1{ 
+  .title-un{
+    height: 100vh;
+    width: 3%;
     display: flex;
     flex-direction: column;
-    font-size: 36px;
-    line-height: 36px;
-    line-break: anywhere;
+    justify-content: center;
+    
 
+
+
+  }
+
+  .title-un h1{
+    word-wrap: break-word;
+  
+  }
+
+  .title-deux{
+    height: 100vh;
+    width: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .title-deux h2{
+    word-wrap: break-word;
+    
   }
  
   .un main{
-   height: 100%;
+   height: 100vh;
   }
  
   .un .items{
    height: 100%;
+   position: absolute;
+   bottom: 0;
   }
+
    
  }
