--- a/style.css
+++ b/style.css
@@ -229,7 +229,6 @@ body{
 
  .container-section-two{
   width: 100%;
-  border: solid black 3px;
   display: flex;
 
 
@@ -237,56 +236,87 @@ body{
 
  .left-block{
   width: 40%;
-  border: solid blue 2px;
  }
  
 
  .right-block{
   width: 60%;
-  border: solid red 3px;
+  display: flex;
  }
 
  .inverted-radius{
   width: 10%;
-  margin-top: 10vh;
-  height: 90%;
+  
+  height: 100%;
   border-radius: 0 0 100% 0;
-  border-right: solid grey 2px;
+  border-right: double grey 4px;
  }
 
- .left-block h2{
-  margin-left: 110%;
+ .deux h2{
+  text-align: center;
   width: 100%;
   text-decoration: underline;
 
 
  }
 
- .container-section-two ul{
-  border: solid red 2px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
+ .container-section-two li{
+  list-style-type: none;
  }
 
- .container-section-two li{
+ .container-section-two ul{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+  height: 100%;
+ }
+
+ .container-section-two h3{
   list-style-type: none;
   font-weight: 900;
   text-decoration: underline;
   text-transform: uppercase;
   text-align: center;
+
  }
 
  .container-section-two p{
   font-weight: 600;
-  border: solid green 3px;
-
-  
+  border-bottom: double grey 3px; 
  }
 
 .container-section-two span{
-  text-decoration: underline blue 2px;
+  text-decoration: underline grey 2px;
   text-transform: uppercase;
  }
+
+
+.img-container{
+  height: 25%;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+}
+
+#img-container{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.img-container img{
+  border: double black 3px;
+  object-fit: contain;
+  max-height: 100%;
+  width: 50%;
+}
+
+@media screen and (max-width : 991px){
+  .container-section-two p{
+    font-weight: 600; 
+    height: auto;
+   }
+}
