retravaille position titre h4 section 3

--- a/style.css
+++ b/style.css
@@ -386,6 +386,7 @@ body{
 
 .satisfied-client h4{
   font-weight: 500;
+ 
 }
 
 .client{
@@ -401,4 +402,18 @@ body{
 
 .trois-img-container img{
   width: 90%;
+
+}
+
+.satisfied-client h3{
+  text-decoration: underline;
+  margin: 0;
+}
+
+.avis-top{
+  margin-top: 5%;
+}
+
+.avis-top h3{
+  text-align: center;
 }
