--- a/style.css
+++ b/style.css
@@ -249,8 +249,7 @@ body{
  }
 
  .inverted-radius{
-  width: 10%;
-  
+  width: 10%; 
   height: 100%;
   border-radius: 0 0 100% 0;
   border-right: double grey 4px;
@@ -382,6 +381,7 @@ body{
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
+  text-align: center;
 }
 
 .satisfied-client h4{
@@ -393,6 +393,7 @@ body{
   text-decoration: underline;
   font-style: italic;
   font-weight: 600;
+  text-align: center;
 }
 
 .guy_writting{
@@ -417,3 +418,73 @@ body{
 .avis-top h3{
   text-align: center;
 }
+
+
+                                      /*quatre*/
+
+#quatre h2{
+  text-align: center;
+  text-decoration: underline;
+}
+
+.container-section-four{
+  display: flex;
+}
+
+.quatre-left-block{
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.quatre-inverted-radius{
+  width:10%;
+  height: 100vh;
+  border-radius: 0 0 100% 0;
+  border-right: double grey 4px;
+}
+
+.quatre-right-block{
+  width: 55%;
+  display: flex;
+}
+
+#quatre h3{
+  text-align: center;
+  text-decoration: underline;
+  margin: 2%;
+}
+
+.quatre p{
+  text-align: center;
+  font-weight: 500;
+  margin: 2%;
+}
+
+#quatre .avis-top{
+  margin: 0;
+}
+
+.quatre-left_block_img{
+ display: flex;
+ justify-content: center;
+}
+
+.quatre-satisfied-client{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.quatre .satisfied-client{
+  display: flex;
+  flex-direction: column;
+}
+
+.quatre-right-block-img img{
+  width: 100%;
+  height: 15.5rem;
+  object-fit: contain;
+}
+
